<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="197dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-57dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_wave"
        tools:ignore="MissingConstraints,VectorDrawableCompat"
        android:contentDescription="@string/wave" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="111dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <ImageView
        android:id="@+id/bookLogo"
        android:layout_width="match_parent"
        android:layout_height="209dp"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="193dp"
        android:contentDescription="@string/booklogo"
        app:srcCompat="@drawable/book_logo" />

    <TextView
        android:id="@+id/welcome_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="258dp"
        android:gravity="center"
        android:text="@string/welcome_text"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/get_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="225dp"
        android:gravity="center"
        android:text="@string/started"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="318dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginBottom="130dp"
        android:backgroundTint="@color/black"
        android:gravity="center"
        android:text="@string/login_title"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        android:onClick="startLoginPage"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up"
        android:layout_width="318dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginBottom="59dp"
        android:backgroundTint="@color/white"
        android:text="@string/sign_up_title"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        android:onClick="startRegisterPage"/>
</RelativeLayout>