<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/go_to_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:translationY="10dp"
        android:layout_marginStart="10dp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:translationY="30dp"
        android:visibility="invisible"
        android:indeterminateTint="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:translationY="100dp" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:translationY="160dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="150dp">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:translationY="20dp"
            app:srcCompat="@drawable/book_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:translationY="150dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/email_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:translationY="180dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:endIconMode="clear_text"
            app:boxStrokeColor="@color/black"
            android:hint="@string/enter_your_email"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:translationY="260dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/pass_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:translationY="290dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:endIconMode="password_toggle"
            app:boxStrokeColor="@color/black"
            android:hint="@string/enter_your_password"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="@color/black"
            android:text="@string/login_title"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:translationY="370dp"
            app:cornerRadius="10dp" />

        <TextView
            android:id="@+id/reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Forgot Password?"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:translationY="460dp" />

        <TextView
            android:id="@+id/go_to_registar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Don't have an account? Sign Up"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:translationY="500dp" />

    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>